bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: value =< is not a member of Int
  if ((a>=10) && (a=<20)) {
                   ^In1020:5: error: value =< is not a member of Int
  if ((b>=10) && (b=<20)) {
                   ^